--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2"
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "stripe": "^18.1.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.2",
+    "@types/node": "^22.15.21",
     "nodemon": "^3.0.1"
   }
 }
